--- a/.github/workflows/github-docker-cicd.yaml
+++ b/.github/workflows/github-docker-cicd.yaml
@@ -1,4 +1,4 @@
-name: Github-Docker Hub MLOps pipeline
+name: Github-Docker Hub MLOps pipeline - Kamila
 
 env:
   DOCKER_USER: ${{ secrets.DOCKER_USER }}
@@ -14,15 +14,16 @@ on:
       - main
 
 jobs:
-  ci_pipeline: 
+  ci_pipeline:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Mise à jour vers v3 pour Node.js 16+
         with:
           fetch-depth: 0
 
       - name: Set up Python 3.9
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
@@ -46,19 +47,23 @@ jobs:
   cd_pipeline:
     runs-on: ubuntu-latest
     needs: [ci_pipeline]
+
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Mise à jour vers v3 pour Node.js 16+
 
       - name: Docker login
+        env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
 
       - name: Get current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
+        run: echo "date=$(date +'%Y-%m-%d--%H-%M-%S')" >> $GITHUB_ENV
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USER }}/${{ secrets.REPO_NAME }}:${{ env.date }}
 
       - name: Docker Push
-        run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
+        run: docker push ${{ secrets.DOCKER_USER }}/${{ secrets.REPO_NAME }}:${{ env.date }}
